--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
         <qcloud.commons.logging.version>1.1.3</qcloud.commons.logging.version>
         <aliyun.sms.sdk.core>4.4.6</aliyun.sms.sdk.core>
         <aliyun.sms.sdk.ecs>4.17.6</aliyun.sms.sdk.ecs>
+        <qingyun.oss.version>2.5.1</qingyun.oss.version>
         <qcloud.sms>3.1.57</qcloud.sms>
         <elasticsearch.version>7.9.2</elasticsearch.version>
         <aws.sdk.version>1.11.106</aws.sdk.version>
@@ -217,6 +218,13 @@
                 <groupId>com.aliyun.oss</groupId>
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>${aliyun.oss.version}</version>
+            </dependency>
+
+            <!--青云的OSS-->
+            <dependency>
+                <groupId>com.yunify</groupId>
+                <artifactId>qingstor.sdk.java</artifactId>
+                <version>${qingyun.oss.version}</version>
             </dependency>
 
             <!--腾讯云上传文件客户端，用的时候手动引入-->
