【8.0.5】更新一个青云的版本号

--- a/kernel-d-file/file-sdk-qingyun/pom.xml
+++ b/kernel-d-file/file-sdk-qingyun/pom.xml
@@ -28,8 +28,8 @@
         <dependency>
             <groupId>com.yunify</groupId>
             <artifactId>qingstor.sdk.java</artifactId>
+            <version>${qingyun.oss.version}</version>
         </dependency>
-
 
     </dependencies>
 
