--- a/kernel-s-system/system-spring-boot-starter/pom.xml
+++ b/kernel-s-system/system-spring-boot-starter/pom.xml
@@ -54,6 +54,13 @@
 
         <!--将常用的模块集成在system中，主项目中保持简洁-->
 
+        <!--sys_config表的配置，系统配置维护-->
+        <dependency>
+            <groupId>cn.stylefeng.roses</groupId>
+            <artifactId>config-spring-boot-starter</artifactId>
+            <version>${roses.version}</version>
+        </dependency>
+
         <!--认证和鉴权模块-->
         <dependency>
             <groupId>cn.stylefeng.roses</groupId>
