--- a/kernel-d-db/db-sdk-mp/pom.xml
+++ b/kernel-d-db/db-sdk-mp/pom.xml
@@ -32,6 +32,12 @@
             <version>${roses.version}</version>
         </dependency>
 
+        <!-- aop -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
